# BlockGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
Engine/: CMakeLists.txt
Engine/include/: CustomException.h  Define.h  Game.h
Engine/include/Application/: Window.h
Engine/src/: Main.cpp
Engine/src/Application/: Window.cpp
Game/: CMakeLists.txt
Game/src/: BlockGame.cpp
include/glad/: CMakeLists.txt
include/glad/src/: glad.c
include/imgui/: CMakeLists.txt
include/old_glad/: CMakeLists.txt
include/old_glad/include/glad/: gl.h
include/old_glad/src/: GL.c
include/stb/: CMakeLists.txt
include/stb/src/: stb.c
res/: fragment-shader.glsl  fragment.glsl  shader.glsl  vertex.glsl
res/shaders/: block-fragment.glsl  block-vertex.glsl  vertex-shader.glsl
src/: Application.cpp  Application.h  Buffer.h  Defines.h  GL.cpp  GL.h  GUI.cpp  GUI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h  main.cpp
src/Application/: App.cpp  App.h  Application.cpp  Application.h  Camera.cpp  Camera.h  Debug.cpp  Debug.h  GFX.h  ImGUI.cpp  ImGUI.h  Input.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Window.cpp  Window.h
src/Engine/App/: Application.cpp  Application.h  Gui.cpp  Gui.h  Input.cpp  Input.h  Window.cpp  Window.h
src/Engine/Common/: Debug.cpp  Debug.h  Recalc.h
src/Engine/GL/: GL.cpp  GL.h  IndexBuffer.h  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
src/Engine/Rendering/: GL.cpp  GL.h  Renderer.h  Shader.h  Texture.cpp  Texture.h  VertexBuffer.h
src/Engine/Scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
src/Game/: Block.cpp  Block.h  BlockGame.cpp  BlockGame.h  Camera.cpp  Camera.h  MainScene.cpp  MainScene.h  Test.cpp  Test.h  Util.h
src/Game/Debug/: Debug.cpp  Debug.h
src/Render/: GL.cpp  GL.h  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
src/Rendering/: Base.h  GFX.h  GL.cpp  GL.h  GLBuffer.h  IndexBuffer.h  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
src/Rendering/base/: ImGUI.cpp  ImGui.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/Rendering/gfx/: GL.cpp  GL.h  GLBuffer.h  IndexBuffer.h  Shader.cpp  Shader.h  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
src/Scene/: Block.cpp  Block.h  Camera.cpp  Camera.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
src/base/: GFX.h  ImGui.h  Renderer.cpp  Renderer.h
src/gfx/: GL.cpp  GL.h  GLBuffer.cpp  GLBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBufferLayout.h  Window.cpp  Window.h
